daddymaggus_bayern/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: daddymaggus-bayern
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: daddymaggus-bayern
  template:
    metadata:
      labels:
        app: daddymaggus-bayern
    spec:
      containers:
        - name: daddymaggus-bayern
          image: build-01:8085/daddymaggus-bayern:0.1.0
          imagePullPolicy: Always
          ports:
            - containerPort: 80
      imagePullSecrets:
        - name: regcred
