daddymaggus_bayern/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: daddymaggus-bayern
  namespace: default
spec:
  tls:
    - hosts:
        - daddymaggus.bayern
      secretName: daddymaggus-bayern-cert
  rules:
    - host: "daddymaggus.bayern"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: daddymaggus-bayern
                port:
                  number: 80
